[gd_scene load_steps=3 format=3 uid="uid://dn3865weo5t6o"]

[ext_resource type="Script" uid="uid://05xqu1orsm2i" path="res://addons/diisis/editor/src/title_line_edit.gd" id="1_0wdff"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yg0hh"]

[node name="PageKeyLineEdit" type="LineEdit"]
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(1, 0.682353, 0.270588, 0.603922)
theme_override_colors/font_uneditable_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 16
theme_override_styles/read_only = SubResource("StyleBoxEmpty_yg0hh")
expand_to_text_length = true
script = ExtResource("1_0wdff")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
